Added gap to simplehome screen to make it more consistent with rest of theme
Weather menu
Pictures menu
Fix for profile on simple homescreen so not hidden when favourites visible
Added ability to choose between resume and play on home widgets
Smart playlist dialogs complete
Content settings dialog
Network settings dialog
Addon settings dialog
PVR group management dialog

[B]0.3.0[/B]
All main categories (movies, tvshows, music, pictures, programs) customisable
Dropped custom category (old games menu)
Pictures now has a custom submenu
Rearranged categories so LiveTV is on the left of movies

[B]0.3.1[/B]
Fixed icon selection not showing image
Can enable and disable category from custom home items menu
Auto prompt to select icon from extras after choosing path for custom item
Fixed weather scrolling issue (hopefully?)
Fixed thumbs in plugins to show large and small
Fixed weather panel issue

[B]0.3.2[/B]
Fixed bug when selecting favourites being hidden by icon selection
Fixed bug when selecting playlist incorrectly shows "select icon" instead of "select file"
Added thumbnails view to advanced launcher.
Added years, studios, genres as defaults for movies
Fixed bug in Reel
Fix thumbnails to show scrolling text
Fixed profile info color on simple home
Re-added Big Info view for advanced launcher

[B]0.3.3[/B]
OSD controls at top of screen
Pause now shows movie info
Option for smaller OSD/info for videos
OSD cleanup
classic poster for genres

[B]0.3.4[/B]
fixed dialogbusy colour issue
videoinfo shows path and premiered when refresh is hovered
fixed dialogslider wrong path for git
Added option for simplified seek bar
OSD only shows info on pressing up or info button
Fixed volume colours for dark theme.
Added option to start lyrics automatically
Updated lyrics to look similar to scrolling music vis text
OSD fixes
Auto show plot option
Colour fixes for dark theme in addon list and info
Syntax error fixes
thumb addon icon fix
changelog addon fix
Fixed music scale artwork